--- a/cog.yaml
+++ b/cog.yaml
@@ -1,6 +1,6 @@
 # Configuration for Cog ⚙️
 
-# image: "nvidia/cuda:9.0-cudnn7-devel"
+image: "animcogn/face_recognition:cpu"
 
 build:
   # Enable GPU and CUDA for face_recognition
@@ -18,12 +18,12 @@ build:
   #   - "python3-pip"
 
   # Python version
-  python_version: "3.10.11"
+  python_version: "3.6"
 
   # Python packages
   python_packages:
-    - "face-recognition"
-    - "opencv-python"
+    - "face-recognition>=1.3.0"
+    # - "opencv-python"
 
   # Additional setup commands
   # run:
